# ros2_opencv

./: README.md  camera_publisher.py  tcp_receiver.py  tcp_sender.py  yolo_detector.py
cpp/: CMakeLists.txt  detection_logger.cpp
